--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.556.0",
     "next": "16.0.1",
     "prisma": "^5.15.0",
     "react": "19.2.0",
